1. z-index corrected to positive values. 2. Properties are used for trasition instead of all value. 3. Added action and method attributes for form. 4. Label is used for input fields. 5. Removed required attribute in radio button No

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -64,7 +64,7 @@
   background: #FFFFFF;
   inline-size: 114px;
   block-size: 33px;
-  transition: 0.3s ease;
+  transition: background-color 0.3s ease;
 }
 
 .banner__button:hover {
