--- a/styles/choose-tour.css
+++ b/styles/choose-tour.css
@@ -187,7 +187,7 @@
   .choose-tour__item {
     font-size: 23px;
     line-height: 122%;
-    transition: 0.3s ease;
+    transition: background-size 0.3s ease;
   }
 
   .choose-tour__item:nth-child(1) {
